# jon-finetune

./: .env.example  .gitignore  README.md  extract_data.py  inference.py  prepare_dataset.py  pyproject.toml  requirements.txt  train.py
